name:                roguelike
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/roguelike#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Common
                     , Drawable
                     , Entity
                     , Tile
                     , Options
                     , Geometry
                     , Lenses
                     , Game
                     , GameState
  build-depends:       base >= 4.7 && < 5
                     , hscurses
                     , monad-loops
                     , vector
                     , optparse-generic
                     , containers
                     , transformers
                     , mtl
                     , free
                     , random
                     , lens
                     , bimap
  default-language:    Haskell2010
executable roguelike
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , roguelike
                     , containers
                     , mtl
                     , random
                     , hscurses
  default-language:    Haskell2010

test-suite roguelike-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , roguelike
                     , hspec
                     , QuickCheck
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/roguelike